# Expense-Counter

./: .gitignore  CMakeLists.txt  main.cpp
core/: core.cpp  core.h
storage/: storage.cpp  storage.h
terminal_ui/: ui.h
